cluster/apps/arrs/common-env-patch.yaml
# cluster/apps/arrs/common-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-arrs-override # Kustomize will match this via target rules instead
spec:
  template:
    spec:
      containers:
        - name: telemetry-and-env # Matches the container
